# tinybrain-python

./: .env.example  .gitignore  FEATURE_COMPARISON.md  GO_PARITY_MATRIX.md  GO_VS_PYTHON.md  IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_DATASET_INTEGRATION.md  WEB_UI_DEMO.md  WEB_UI_DESIGN.md  pyproject.toml  setup.sh  test_mcp_e2e.py
scripts/: native_mcp_smoke.py
tests/: test_cogdb.py  test_database.py  test_mcp_parity_tools.py  test_models.py  test_web.py
tinybrain/: .cursorrules  .cursorrules.user-template  .gitignore  .goreleaser.yml  .roo-mode  FRAMEWORK_LIBRARY_PATTERNS.json  LICENSE  MANUAL_TEST_GUIDE.md  OFFICIAL_DATA_SOURCES.md  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  __init__.py  cli.py  config.example.json  config.py  log_config.py  pyproject.toml
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/: .clinerules  .gitignore  ADVANCED_FEATURES.md  AI_ASSISTANT_INTEGRATION.md  CURSOR_SETUP.md  CWE_LLM_DATASET.json  CWE_SECURITY_PATTERNS.md  CWE_TINYBRAIN_INTEGRATION.md  Dockerfile  ENHANCED_AUTHORIZATION_TEMPLATES.md  ENHANCED_LANGUAGE_LIBRARY_PATTERNS.md  INTEGRATION_TEST_RESULTS.md  MULTI_LANGUAGE_SECURITY_PATTERNS.md  Makefile  README.md  SECURITY_CODE_REVIEW_DATASET.md  TEST_RESULTS.md  TINYBRAIN_SECURITY_TEMPLATES.md  _config.yml  end_to_end_test.sh  go.mod  go.sum  simple_mcp_test.sh  test_mcp.sh  test_mcp_client.sh
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/docs/: advanced-features.md  architecture.md  configuration.md  contributing.md  faq.md  getting-started.md  index.md  memory-model.md  roadmap.md
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/docs/api/: examples.md  overview.md
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/docs/datasets/: cwe-integration.md  index.md  security-templates.md
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/docs/integrations/: ai-assistants.md  cursor.md
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/docs/workflows/: exploit-development.md  penetration-testing.md  security-assessment.md
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/internal/database/: database.go  database_test.go  schema.sql
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/internal/mcp/: server.go
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/internal/models/: models.go
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/internal/repository/: context_snapshot_test.go  memory_repository.go  memory_repository_test.go  task_progress_test.go
tinybrain-copilot-add-github-pages-documentation/tinybrain-copilot-add-github-pages-documentation/test_scenarios/: prompt_templates.md
tinybrain/.github/workflows/: release.yml
tinybrain/database/: __init__.py  schema.py
tinybrain/examples/: basic_usage.md
tinybrain/mcp/: __init__.py
tinybrain/models/: __init__.py
tinybrain/services/: __init__.py
tinybrain/test_data/: nvd_sample.json
tinybrain/test_scenarios/: code_review_test.md  quick_test_guide.md
tinybrain/tests/: __init__.py  conftest.py  test_chromadb.py  test_cogdb_backend.py  test_database.py  test_integration.py  test_mcp.py  test_models.py  test_streamlit.py
tinybrain/tinybrain/: __init__.py  cli.py  config.py
tinybrain/tinybrain/database/: __init__.py  base.py  chromadb_backend.py  cogdb_backend.py  sqlite_backend.py
tinybrain/tinybrain/mcp/: __init__.py  server.py
tinybrain/tinybrain/models/: __init__.py  context_snapshot.py  memory.py  relationship.py  session.py  task_progress.py
tinybrain/tinybrain/services/: __init__.py  security_data_downloader.py  security_retrieval_service.py
tinybrain/tinybrain/ui/: __init__.py  app.py
tinybrain/web/: __init__.py
tinybrain/web/static/: app.js  index.html  style.css
